src/api/deploy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api

spec:
  entryPoints:
    - public
  tls:
    certResolver: main
  routes:
    - kind: Rule
      match: Host(`falukollen-api.dennisskoko.com`)
      services:
        - name: api
          port: http
